# redtangle

./: BUILDING.md  CMakeLists.txt  README.md  TUTORIAL.md
docs/: controls.md
include/apps/: redtangle_builder.h
include/game/: redtangle.h  redtangle_remote.h
include/grpc/: redtangle.proto  redtangle_client.h  redtangle_server.h
include/ui/: redtangle_ui_imgui.h  redtangle_ui_sdl.h
installer/: redtangle-install-script.iss
src/apps/: redtangle_app.cpp  redtangle_builder.cpp  redtangle_server_app.cpp
src/game/: empty_piece.cpp  redtangle_game.cpp  redtangle_piece.cpp  redtangle_remote.cpp
src/grpc/: redtangle_client.cpp  redtangle_server.cpp
src/ui/: redtangle_ui_imgui.cpp  redtangle_ui_sdl.cpp
